--- a/src/calendar.css
+++ b/src/calendar.css
@@ -2,3 +2,12 @@
   background-color: blue;
   color: white;
 }
+
+.box {
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.calendar-days {
+  margin: 0 auto;
+}
