Add hover CSS to day box

--- a/src/calendar.css
+++ b/src/calendar.css
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+.box:hover {
+  cursor: pointer;
+  background-color: blue;
+  color: white;
+}
+
 .calendar-days {
   margin: 0 auto;
 }
